--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
 Django==4.1
+djangorestframework==3.13.1
+drf-extra-fields==3.4.0
 flake8==5.0.4
 flake8-import-order==0.18.1
 isort==5.10.1
@@ -9,4 +11,5 @@ Pillow==9.2.0
 psycopg2==2.9.3
 pycodestyle==2.9.1
 pyflakes==2.5.0
+pytz==2022.2.1
 sqlparse==0.4.2
