--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,9 +1,33 @@
 server {
     listen 80;
+    server_name 127.0.0.1;
+    server_tokens off;
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
+    location /api/ {
+        proxy_pass http://web:8000;
+    }
+
+    location /admin/ {
+        proxy_pass http://web:8000/admin/;
+    }
+
+    location /static/admin/ {
+        root /var/html;
+    }
+
+    location /static/ {
+        root /usr/share/nginx/html/;
+    }
+
+    location /media/ {
+        root /var/html/;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -17,5 +41,4 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
-
 }
